# srunGui

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  srun.cpp  ui.cpp
src/demo/: CMakeLists.txt  imgui_demo.cpp
src/include/: srun_backend.h  ui.h
src/include/common/: msg.h
src/include/csp/: dispatcher.h  message.h  receiver.h  thread_safe_queue.h
